--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus.razor
@@ -43,7 +43,9 @@
 
         @if (_driverBaseItem != null && _driverBaseItem?.CurrentDevice != null && _driverBaseItem.CurrentDevice.Channel.LogEnable == true)
         {
-            <LogConsole Logger=@_driverBaseItem.LogMessage LogPath=@_driverBaseItem.LogPath HeaderText="@Localizer["LogConsole"]" HeightString="var(--logconsle-height)"></LogConsole>
+            <LogConsole LogLevel=@(_driverBaseItem.LogMessage.LogLevel) LogLevelChanged="(a)=>{
+_driverBaseItem.LogMessage.LogLevel=a;
+}" LogPath=@_driverBaseItem.LogPath HeaderText="@Localizer["LogConsole"]" HeightString="var(--logconsle-height)"></LogConsole>
         }
 
 
