!56 恢复插件隔离 * 恢复插件域

--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Plugin/PluginPage.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Plugin/PluginPage.razor
@@ -31,6 +31,9 @@
             <TableToolbarButton TItem="PluginOutput" Color="Color.Info" Icon="fa fa-plus" Text="@RazorLocalizer["Add"]"
                                 OnClickCallback="OnAdd" IsShow=@(AuthorizeButton("添加")) />
 
+            <TableToolbarButton TItem="PluginOutput" Color="Color.Warning" Icon="fa-solid fa-rotate" Text="@PluginPageLoaclozer["Reload"]"
+                                OnClick="OnReload" IsShow=@(AuthorizeButton("添加")) />
+
         </TableToolbarTemplate>
         <TableColumns>
             <TableColumn @bind-Field="@context.Name">
