feat: 更新依赖包

--- a/src/Plugin/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
+++ b/src/Plugin/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
@@ -1,4 +1,4 @@
-﻿@page "/OpcUaMaster"
+﻿@page "/OpcUaMaster105"
 @using BootstrapBlazor.Components
 @using ThingsGateway.Extension
 @using ThingsGateway.Foundation
