feat: 添加1.05版本opcua依赖库

--- a/src/Plugin/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
+++ b/src/Plugin/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
@@ -1,4 +1,4 @@
-﻿@page "/OpcUaMaster105"
+﻿@page "/OpcUaMaster"
 @using BootstrapBlazor.Components
 @using ThingsGateway.Extension
 @using ThingsGateway.Foundation
